src/main/default/objects/Extentia_SIM__MP_MapFilter__c/Extentia_SIM__MP_MapFilter__c.object-meta.xml
<CustomObject>
    <label>MP_MapFilter</label>
    <nameField>
        <label>MP_MapFilter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP_MapFilters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>