src/main/default/objects/Extentia_SIM__MP_MapFilter__c/fields/Extentia_SIM__Expression1__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Expression1__c</fullName>
    <label>Expression1</label>
    <type>TextArea</type>
</CustomField>