src/main/default/objects/Extentia_SIM__MP_MapFilter__c/fields/Extentia_SIM__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>