src/main/default/objects/Extentia_SIM__MP_MapFilter__c/fields/Extentia_SIM__isCustomExpression__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__isCustomExpression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomExpression</label>
    <type>Checkbox</type>
</CustomField>