src/main/default/objects/Extentia_SIM__MP_MapFilter__c/fields/Extentia_SIM__MP_CustomMapping__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__MP_CustomMapping__c</fullName>
    <label>MP_CustomMapping</label>
    <referenceTo>Extentia_SIM__MP_CustomMapping__c</referenceTo>
    <relationshipLabel>MP_MapFilters</relationshipLabel>
    <relationshipName>MapFilters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>