src/main/default/objects/Extentia_SIM__MP_MapFilter__c/fields/Extentia_SIM__Type__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Type__c</fullName>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>